@@ -1,5 +1,15 @@
 2014-02-26  Mark Hahnenberg  <mhahnenberg@apple.com>
 
+        r164764 broke the ARM build
+        https://bugs.webkit.org/show_bug.cgi?id=129415
+
+        Reviewed by Geoffrey Garen.
+
+        * assembler/MacroAssemblerARM.h:
+        (JSC::MacroAssemblerARM::branch32WithPatch): Missing this function.
+
+2014-02-26  Mark Hahnenberg  <mhahnenberg@apple.com>
+
         EFL build fix
 
         * dfg/DFGSpeculativeJIT32_64.cpp: Remove unused variables.
